--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,9 @@
       "16": "images/icon16.png",
       "48": "images/icon48.png",
       "128": "images/icon128.png"
-    }
+    },
+    "default_width": 400,
+    "default_height": 500
   },
   "icons": {
     "16": "images/icon16.png",
